test/src/e2e_vm_tests/test_programs/should_fail/private_function_fully_qualified/src/main.sw
script;

mod pkga;

fn main() {
    pkga::foo();
}
